# VibeStick

./: .env.example  .gitignore  AGENTS.md  NOTICE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
bridge/: pyproject.toml
bridge/src/vibe_stick/: __init__.py  __main__.py
bridge/src/vibe_stick/audio/: recorder.py
bridge/src/vibe_stick/config/: paths.py
bridge/src/vibe_stick/desktop/: hud.py
bridge/src/vibe_stick/paste/: input_injector.py
bridge/src/vibe_stick/providers/: claude.py
bridge/src/vibe_stick/server/: app.py
bridge/src/vibe_stick/telemetry/: __init__.py  cli.py  server.py  store.py
bridge/src/vibe_stick/web/telemetry/: index.html  telemetry.css  telemetry.js
docs/: ARCHITECTURE.md  BATTERY_TELEMETRY.md  HARDWARE.md  INSTALL.zh-CN.md  LOCAL_SECRETS.zh-CN.md  PC_CLIENT_INTEGRATION.md  PROTOCOL.md  PYTHON_RUNTIME_CLEANUP.md  REFACTOR_PLAN.md  STATES_AND_SOUNDS.md  THIRD_PARTY_AUDIT.md
firmware/shared/: sticks3_battery_curve.c  sticks3_battery_curve.h
firmware/sticks3/: CMakeLists.txt  dependencies.lock.esp32  partitions_ota_1700k.csv  partitions_ota_1800k.csv  partitions_ota_1948k.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.stickc_plus  sdkconfig.defaults.stickc_plus_minijoy_bt  sdkconfig.defaults.stickc_plus_se  sdkconfig.defaults.sticks3
firmware/sticks3/assets/wowotou/: README.md
firmware/sticks3/include/: vibe_air_mouse.h  vibe_audio.h  vibe_audio_pdm_filter.h  vibe_bmi270_config.h  vibe_board.h  vibe_board_profile.h  vibe_bridge_profile_policy.h  vibe_bt_composite.h  vibe_bt_status_ui.h  vibe_bt_ui_renderer.h  vibe_input.h  vibe_minijoy_ota.h  vibe_minijoyc.h  vibe_motion.h  vibe_ota_policy.h  vibe_power_policy.h  vibe_recording_policy.h  vibe_recording_upload.h  vibe_stick_anim_assets.h  vibe_stick_config.h  vibe_stick_secrets.example.h  vibe_wav.h  vibe_wifi_policy.h
firmware/sticks3/src/: CMakeLists.txt  main.c  main_minijoy_bt.c  vibe_air_mouse.c  vibe_audio.c  vibe_audio_pdm_filter.c  vibe_board.c  vibe_bridge_profile_policy.c  vibe_bt_composite.c  vibe_bt_status_ui.c  vibe_bt_ui_renderer.c  vibe_input.c  vibe_minijoy_ota.c  vibe_minijoyc.c  vibe_motion.c  vibe_ota_policy.c  vibe_power_policy.c  vibe_recording_policy.c  vibe_recording_upload.c  vibe_stick_anim_assets.c  vibe_wav.c  vibe_wifi_policy.c
firmware/sticks3/src/assets/lottie/: lv_example_lottie_approve.json
firmware/sticks3/tests/: run-host-tests.sh  test_vibe_air_mouse.c  test_vibe_audio_pdm_filter.c  test_vibe_bt_ui_renderer.c  test_vibe_policies.c
firmware/telemetry/: .gitignore
firmware/telemetry/components/vibe_telemetry_boards/: CMakeLists.txt
firmware/telemetry/components/vibe_telemetry_boards/include/: telemetry_board.h
firmware/telemetry/components/vibe_telemetry_boards/src/: board_display.c  board_stickc_plus_11.c  board_sticks3.c
firmware/telemetry/components/vibe_telemetry_common/: CMakeLists.txt
firmware/telemetry/components/vibe_telemetry_common/include/: vibe_telemetry.h  vibe_telemetry_config.h
firmware/telemetry/components/vibe_telemetry_common/src/: vibe_telemetry_app.c  vibe_telemetry_http.c  vibe_telemetry_identity.c  vibe_telemetry_json.c  vibe_telemetry_wifi.c
firmware/telemetry/secrets/: vibe_telemetry_secrets.example.h
firmware/telemetry/stickc_plus_11/: CMakeLists.txt
firmware/telemetry/stickc_plus_11/main/: CMakeLists.txt  main.c
firmware/telemetry/sticks3/: CMakeLists.txt
firmware/telemetry/sticks3/main/: main.c
firmware/telemetry/tests/: run-host-tests.sh  test_battery_curve.c  test_telemetry_common.c
hardware-costing/: README.md  bom-costing.xlsx
hardware-reference-downloads/: HARDWARE_BOM.md  README.md
hardware-reference-downloads/M5StickC-Plus/: official-product-page.html
hardware-reference-downloads/StickS3/: m5pm1-low-power-config-page.html  official-product-page.html
scripts/: battery-firmware.sh  battery-test.sh  check_cyber_bridge_flow.py  cyber_agent_agx_tts.py  cyber_agent_omni.py  dev.sh  dev_cyber_agent.py  doctor.sh  firmware.sh  generate_minijoy_pet_assets.py  generate_pet_assets.py  generate_svg_spinner_assets.py  install.sh  make_wowotou_device_simulator.py  minijoy-log.sh  normalize_wowotou_frames.py  ota_publish.py  ota_publish.sh  pack_wowotou_animation_assets.py  render_svg_animation_frames.py  render_wowotou_animation_frames.py  setup.sh  simulate-battery-telemetry.py  transcribe_via_agx_asr.py  uninstall.sh
tests/: test_agx_asr_transcriber_script.py  test_claude_provider.py  test_cyber_agent_agx_tts.py  test_cyber_agent_omni.py  test_desktop_hud.py  test_firmware_recording_controls.py  test_recording_controller.py  test_server_ota.py  test_server_security.py  test_telemetry_packaging.py  test_telemetry_server.py  test_telemetry_store.py  test_telemetry_web.py
