cmake_minimum_required(VERSION 3.16)

if(NOT DEFINED VIBE_BOARD)
    if(DEFINED ENV{VIBE_BOARD})
        set(VIBE_BOARD "$ENV{VIBE_BOARD}")
    else()
        set(VIBE_BOARD "sticks3")
    endif()
endif()
set(VIBE_BOARD "${VIBE_BOARD}" CACHE STRING "VibeStick board target")
option(VIBE_SERIAL_DEBUG "Enable serial commands that simulate hardware buttons" OFF)

if(VIBE_BOARD STREQUAL "stickc_plus" OR VIBE_BOARD STREQUAL "stickc_plus_se")
    set(IDF_TARGET "esp32")
    set(SDKCONFIG_DEFAULTS "sdkconfig.defaults;sdkconfig.defaults.${VIBE_BOARD}")
elseif(VIBE_BOARD STREQUAL "sticks3")
    set(IDF_TARGET "esp32s3")
    set(SDKCONFIG_DEFAULTS "sdkconfig.defaults;sdkconfig.defaults.sticks3")
else()
    message(FATAL_ERROR "Unsupported VIBE_BOARD: ${VIBE_BOARD}")
endif()

set(EXTRA_COMPONENT_DIRS src)
include($ENV{IDF_PATH}/tools/cmake/project.cmake)
if(VIBE_BOARD STREQUAL "stickc_plus" OR VIBE_BOARD STREQUAL "stickc_plus_se")
    idf_build_set_property(DEPENDENCIES_LOCK dependencies.lock.esp32)
endif()
project(vibe_stick_${VIBE_BOARD})
